--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
-    "@types/lodash": "^4.14.165",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "react": "16.13.1",
@@ -50,7 +49,7 @@
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
-    "add": "^2.0.6",
+    "@types/lodash": "^4.14.165",
     "babel-jest": "^25.1.0",
     "eslint": "^7.15.0",
     "eslint-plugin-prettier": "^3.2.0",
@@ -62,8 +61,7 @@
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1",
-    "typescript": "^3.8.3",
-    "yarn": "^1.22.10"
+    "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "react-native",
